# MenuDog

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  main.cpp
